<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application.fragments.FragmentVeicolo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        tools:context=".application.MainActivity">

        <TextView
            android:id="@+id/tx_targa"
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/dw_spinner"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="TARGA VEICOLO"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_allarme"
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/dw_spinner"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/allarme_manutenzione"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_Carburante" />

        <TextView
            android:id="@+id/tx_modello"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/dw_spinner"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="Modello"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_targa" />

        <TextView
            android:id="@+id/tx_kmEffettuati"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/dw_spinner"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="Km effettuati"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_modello" />

        <TextView
            android:id="@+id/tx_Carburante"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/dw_spinner"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="Carburante"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_kmEffettuati" />

        <TextView
            android:id="@+id/tx_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="57dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/modello"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_targa" />

        <TextView
            android:id="@+id/tx_kmeff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/km_percorsi"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_mod" />

        <TextView
            android:id="@+id/tx_carb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/conbustibile"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_kmeff" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>